--- a/node99.html
+++ b/node99.html
@@ -333,9 +333,11 @@ and now the tests pass:
     index
       ok: should display index with posts 
 
-
   1 passing (12ms)
 </PRE>
+
+<P>
+Next let’s write tests for the “new post” route.
 
 <P>
 
