--- a/node99.html
+++ b/node99.html
@@ -337,7 +337,35 @@ and now the tests pass:
 </PRE>
 
 <P>
-Next let’s write tests for the “new post” route.
+Next let’s write tests for the 
+<FONT COLOR="#ff0000"> new post</FONT> route.
+
+<P>
+<PRE>
+~/src/coffee/coffeepress(master)]$ cat -n test/routes-test.coffee 
+     1  chai     = require 'chai'
+     2  expect   = chai.expect
+     3  routes = require "../routes/index"
+     4  
+     5  describe "routes", -&gt;
+     6    req = {}
+     7    res = {}
+     8    describe "index", -&gt;
+     9      it "should display index with posts", -&gt;
+    10        res.render = (view, vars) -&gt;
+    ...           ...
+    15  
+    16    describe "new post", -&gt;
+    17      it "should display the add post page", (done) -&gt;
+    18        res.render = (view, vars) -&gt;
+    19            expect(view).equal "add_post"
+    20            expect(vars.title).equal "Write New Post"
+    21      
+    22        routes.newPost(req, res)
+</PRE>
+El test falla:
+<PRE>
+</PRE>
 
 <P>
 
