--- a/node99.html
+++ b/node99.html
@@ -396,7 +396,7 @@ Añadamos un método <code>newPost</code> al código de la ruta:
      9    newPost: (req, res) -&gt;
     10      # do nothing
 </PRE>
-Cuando ejecutamos las pruebas pasan:
+¡Cuando ejecutamos las pruebas pasan!:
 <PRE>
 [~/src/coffee/coffeepress(master)]$ mocha --compilers coffee:coffee-script/register -R spec test/routes-test.coffee 
 
