--- a/node99.html
+++ b/node99.html
@@ -606,6 +606,7 @@ Es necesario instalar <code>gulp-shell</code>:
 <PRE>
 [~/src/coffee/coffeepress(master)]$ npm install --save-dev gulp-shell
 </PRE>
+ahora podemos ejecutar las pruebas con <code>gulp test</code>.
 
 <P>
 
