--- a/node99.html
+++ b/node99.html
@@ -594,7 +594,7 @@ gulp.task 'mongod', -&gt;
 </PRE>
 
 <P>
-Este es el código de la version javascript:
+Este es el correspondiente código de la version javascript:
 <PRE>
 [~/src/coffee/coffeepress(master)]$ cat gulpfile.js
 // Note the new way of requesting CoffeeScript since 1.7.x
