--- a/node96.html
+++ b/node96.html
@@ -148,19 +148,27 @@ James carr blog and updated 2015:
   HREF="node99.html">Pruebas</A>
 <UL>
 <LI><A NAME="tex2html2723"
-  HREF="node99.html#SECTION06230010000000000000">Mocha: done</A>
+  HREF="node99.html#SECTION06230010000000000000">Mocha, Chai y Expect: instalando las dependencias</A>
 <LI><A NAME="tex2html2724"
-  HREF="node99.html#SECTION06230020000000000000">Escribiendo newPost</A>
+  HREF="node99.html#SECTION06230020000000000000">Una Prueba Sencilla</A>
 <LI><A NAME="tex2html2725"
-  HREF="node99.html#SECTION06230030000000000000">views/add_post.jade</A>
+  HREF="node99.html#SECTION06230030000000000000">Should display index with posts: red</A>
 <LI><A NAME="tex2html2726"
-  HREF="node99.html#SECTION06230040000000000000">views/layout.jade</A>
+  HREF="node99.html#SECTION06230040000000000000">Should display index with posts: green</A>
 <LI><A NAME="tex2html2727"
-  HREF="node99.html#SECTION06230050000000000000">Should display the add post page: green</A>
+  HREF="node99.html#SECTION06230050000000000000">Mocha: done</A>
 <LI><A NAME="tex2html2728"
-  HREF="node99.html#SECTION06230060000000000000">views/index.jade</A>
+  HREF="node99.html#SECTION06230060000000000000">Escribiendo newPost</A>
 <LI><A NAME="tex2html2729"
-  HREF="node99.html#SECTION06230070000000000000">Gulpfile</A>
+  HREF="node99.html#SECTION06230070000000000000">views/add_post.jade</A>
+<LI><A NAME="tex2html2730"
+  HREF="node99.html#SECTION06230080000000000000">views/layout.jade</A>
+<LI><A NAME="tex2html2731"
+  HREF="node99.html#SECTION06230090000000000000">Should display the add post page: green</A>
+<LI><A NAME="tex2html2732"
+  HREF="node99.html#SECTION062300100000000000000">views/index.jade</A>
+<LI><A NAME="tex2html2733"
+  HREF="node99.html#SECTION062300110000000000000">Gulpfile</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
 
