--- a/node96.html
+++ b/node96.html
@@ -156,28 +156,37 @@ James carr blog and updated 2015:
 <LI><A NAME="tex2html2726"
   HREF="node99.html#SECTION06230040000000000000">Should display index with posts: green</A>
 <LI><A NAME="tex2html2727"
-  HREF="node99.html#SECTION06230050000000000000">expect vars.posts equall <P><!-- MATH
+  HREF="node99.html#SECTION06230050000000000000">Expect vars.posts equall <P><!-- MATH
  \begin{displaymath}
 \end{displaymath}
  -->
 </P>
 <DIV ALIGN="CENTER" CLASS="mathdisplay">
 
-</DIV><P></P></A>
+</DIV><P></P>: red</A>
 <LI><A NAME="tex2html2728"
-  HREF="node99.html#SECTION06230060000000000000">Mocha: done</A>
+  HREF="node99.html#SECTION06230060000000000000">Expect vars.posts equall <P><!-- MATH
+ \begin{displaymath}
+\end{displaymath}
+ -->
+</P>
+<DIV ALIGN="CENTER" CLASS="mathdisplay">
+
+</DIV><P></P>: green</A>
 <LI><A NAME="tex2html2729"
-  HREF="node99.html#SECTION06230070000000000000">Escribiendo newPost</A>
+  HREF="node99.html#SECTION06230070000000000000">Mocha: done</A>
 <LI><A NAME="tex2html2730"
-  HREF="node99.html#SECTION06230080000000000000">views/add_post.jade</A>
+  HREF="node99.html#SECTION06230080000000000000">Escribiendo newPost</A>
 <LI><A NAME="tex2html2731"
-  HREF="node99.html#SECTION06230090000000000000">views/layout.jade</A>
+  HREF="node99.html#SECTION06230090000000000000">views/add_post.jade</A>
 <LI><A NAME="tex2html2732"
-  HREF="node99.html#SECTION062300100000000000000">Should display the add post page: green</A>
+  HREF="node99.html#SECTION062300100000000000000">views/layout.jade</A>
 <LI><A NAME="tex2html2733"
-  HREF="node99.html#SECTION062300110000000000000">views/index.jade</A>
+  HREF="node99.html#SECTION062300110000000000000">Should display the add post page: green</A>
 <LI><A NAME="tex2html2734"
-  HREF="node99.html#SECTION062300120000000000000">Gulpfile</A>
+  HREF="node99.html#SECTION062300120000000000000">views/index.jade</A>
+<LI><A NAME="tex2html2735"
+  HREF="node99.html#SECTION062300130000000000000">Gulpfile</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
 
